# Socket-inplementation-in-rust-and-c

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
C_implementation/: client.c
c_implementation/: client  client.c  server  server.c
rust_implementation/: .gitkeep
rust_implementation/client/src/: main.rs
rust_implementation/server/src/: main.rs
